--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -1,5 +1,12 @@
 <%- include ("header.ejs") %>
-<hr>
+<div class="bg-light py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Addresses</strong></div>
+        </div>
+    </div>
+</div>
+  <br>
 <section class="profile-section">
     <div class="container">
         <div class="row justify-content-center">
