--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -172,6 +172,7 @@
 <script>
   const logout = document.getElementById('logoutMain')
 </script>
+<script src="../../static/admin/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
 <script src="../../static/js/magiczoom.js"></script>
