--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -13,83 +13,86 @@
       <div class="row mb-5 justify-content-center"> <!-- Center aligning the row -->
         <% if(nostock){%>
           <div style="color: red; font-size: 16px; font-weight: bold;">
-              <%=nostock%>
+            <%=nostock%>
           </div>
               <%}%>
-        <form class="col-md-12" method="post">
-          <% if (cart && cart.item && cart.item.length> 0) { %>
-            <div class="site-blocks-table">
-              <table class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th class="product-thumbnail">Image</th>
-                    <th class="product-name">Product</th>
-                    <th class="product-thumbnail">Size</th>
-                    <th class="product-price">Price</th>
-                    <th class="product-quantity">Quantity</th>
-                    <th class="product-total">Total</th>
-                    <th class="product-remove">Remove</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% cart.item.forEach((item, index)=> { %>
-                    <tr>
-                      <td class="product-thumbnail">
-                        <img src="<%= item.productId.image[0] %>" alt="Image" class="img-fluid">
-                      </td>
-                      <td class="product-name">
-                        <h2 class="h5 text-black">
-                          <%= item.productId.name %>
-                        </h2>
-                        <p>
-                          <% if (insufficientStock.find(stockItem=> stockItem.item._id.toString() ===
-                            item._id.toString())) { %>
-                            <span class="out-of-stock-message text-danger">Out of Stock</span>
-                            <% } %>
-                        </p>
-                      </td>
-                      <td class="product-name">
-                        <h2 class="h5 text-black">
-                          <%= item.size %>
-                        </h2>
-                      </td>
-                      <td>
-                        <h5>₹<%= item.price %>
-                        </h5>
-                      </td>
-                      <td>
-                        <div class="input-group mb-3" style="max-width: 120px;">
-                          <div class="input-group-prepend">
-                            <button
-                              onclick="updateQuantity('<%= cart._id %>','<%= item._id %>', '<%= item.size %>','<%= item.price %>','<%= index %>' , -1, )"
-                              class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                          </div>
-                          <input id="sst<%= index%>" type="text" class="form-control text-center"
-                            value="<%= item.quantity %>" placeholder="" aria-label="Example text with button addon"
-                            aria-describedby="button-addon1">
-                          <div class="input-group-append">
-                            <button
-                              onclick="updateQuantity('<%= cart._id %>','<%= item._id %>', '<%= item.size %>','<%= item.price %>','<%= index %>' , 1, )"
-                              class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                          </div>
-                        </div>
-                      </td>
-                      <td>
-                        <h5 id="total<%= index%>">₹<%= item.total %>
-                        </h5>
-                      </td>
-                      <td><a onclick="confirm('/deletcart/<%= item._id %>/<%= item.size %>')"
-                          class="btn btn-primary btn-sm">X</a>
-                      </td>
-                    </tr>
-                    <% }) %>
-                </tbody>
-              </table>
-            </div>
-            <% } else { %>
-              <div class="alert">Your cart is empty.</div>
-              <% } %>
-        </form>
+            <form class="col-md-12" method="post">
+              <% if (cart && cart.item && cart.item.length> 0) { %>
+                <div class="table-responsive">
+                  <div class="site-blocks-table">
+                    <table class="table table-bordered">
+                      <thead>
+                        <tr>
+                          <th class="product-thumbnail">Image</th>
+                          <th class="product-name">Product</th>
+                          <th class="product-thumbnail">Size</th>
+                          <th class="product-price">Price</th>
+                          <th class="product-quantity">Quantity</th>
+                          <th class="product-total">Total</th>
+                          <th class="product-remove">Remove</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <% cart.item.forEach((item, index)=> { %>
+                          <tr>
+                            <td class="product-thumbnail">
+                              <img src="<%= item.productId.image[0] %>" alt="Image" class="img-fluid">
+                            </td>
+                            <td class="product-name">
+                              <h2 class="h5 text-black">
+                                <%= item.productId.name %>
+                              </h2>
+                              <p>
+                                <% if (insufficientStock.find(stockItem=> stockItem.item._id.toString() ===
+                                  item._id.toString())) { %>
+                                  <span class="out-of-stock-message text-danger">Out of Stock</span>
+                                  <% } %>
+                              </p>
+                            </td>
+                            <td class="product-name">
+                              <h2 class="h5 text-black">
+                                <%= item.size %>
+                              </h2>
+                            </td>
+                            <td>
+                              <h5>₹<%= item.price %>
+                              </h5>
+                            </td>
+                            <td>
+                              <div class="input-group mb-3" style="max-width: 120px;">
+                                <div class="input-group-prepend">
+                                  <button
+                                    onclick="updateQuantity('<%= cart._id %>','<%= item._id %>', '<%= item.size %>','<%= item.price %>','<%= index %>' , -1, )"
+                                    class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
+                                </div>
+                                <input id="sst<%= index%>" type="text" class="form-control text-center"
+                                  value="<%= item.quantity %>" placeholder="" aria-label="Quantity"
+                                  aria-describedby="button-addon1">
+                                <div class="input-group-append">
+                                  <button
+                                    onclick="updateQuantity('<%= cart._id %>','<%= item._id %>', '<%= item.size %>','<%= item.price %>','<%= index %>' , 1, )"
+                                    class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
+                                </div>
+                              </div>
+
+                            </td>
+                            <td>
+                              <h5 id="total<%= index%>">₹<%= item.total %>
+                              </h5>
+                            </td>
+                            <td><a onclick="confirm('/deletcart/<%= item._id %>/<%= item.size %>')"
+                                class="btn btn-primary btn-sm">X</a>
+                            </td>
+                          </tr>
+                          <% }) %>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+                <% } else { %>
+                  <div class="alert">Your cart is empty.</div>
+                  <% } %>
+            </form>
       </div>
 
       <div class="row mb-5">
@@ -126,9 +129,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  </div>
   </div>
   <script>
 
