--- a/views/user/header.ejs
+++ b/views/user/header.ejs
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
 
 
-
+  <link rel="stylesheet" href="../../static/admin/css/styles.min.css">
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <link rel="stylesheet" href="../static/css/magnific-popup.css">
   <link rel="stylesheet" href="../static/css/jquery-ui.css">
