--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -1,37 +1,52 @@
-<%- include ("header.ejs") %>
-<div class="bg-light py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 mb-0"><a href="/profile">User</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Reset Password</strong></div>
-      </div>
-    </div>
-  </div>
-<style>
-    .border-rounded {
-        width: fit-content;
-        margin: 0 auto;
-    }
+<!DOCTYPE html>
+<html lang="en">
 
-    /* Custom CSS to align text labels on top */
-    .form-group.row {
-        margin-bottom: 20px;
-    }
+<head>
+    <title>VintageRags</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" type="image/png" href="../../static/images/logo.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+    <link rel="stylesheet" href="../../static/css/magiczoom.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+    <link rel="stylesheet" href="../static/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
 
-    .form-group.row .col-form-label {
-        text-align: left;
-    }
-</style>
+
+
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/magnific-popup.css">
+    <link rel="stylesheet" href="../static/css/jquery-ui.css">
+    <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../static/css/owl.theme.default.min.css">
+
+
+    <link rel="stylesheet" href="../static/css/aos.css">
+
+    <link rel="stylesheet" href="../static/css/style.css">
+    <style>
+        .container {
+            position: absolute;
+            top: 48%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
+</head>
+
+<body>
+
 <section class="profile-section">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <h3 class="text-center">Change Password</h3>
-                <form action="/passwordUpdating" method="post" onsubmit="return validatePassword()">
-                    <div id="user-details" class="border-rounded border rounded p-4 text-dark">
-                        <!-- User details will be displayed here using EJS tags -->
-                        <div class="form-group row">
-                            <label for="currentPassword" class="col-sm-12 col-form-label">Current Password:</label>
-                            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="text-center mb-4">Change Password</h3>
+                        <form action="/passwordUpdating" method="post" onsubmit="return validatePassword()">
+                            <div class="form-group mb-3">
+                                <label for="currentPassword" class="form-label">Current Password:</label>
                                 <input type="password" class="form-control" id="currentPassword" name="pass" required>
                                 <% if(pass && pass.length > 0){ %>
                                     <div style="color: red; font-size: 16px; font-weight: bold;">
@@ -39,28 +54,57 @@
                                     </div>
                                 <% } %>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="newPassword" class="col-sm-12 col-form-label">New Password:</label>
-                            <div class="col-sm-12">
+                            <div class="form-group mb-3">
+                                <label for="newPassword" class="form-label">New Password:</label>
                                 <input type="password" class="form-control" id="password" name="npass" onkeyup="validatePassword()" required>
                                 <span id="passwordError"></span>
                             </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="confirmPassword" class="col-sm-12 col-form-label">Confirm Password:</label>
-                            <div class="col-sm-12">
+                            <div class="form-group mb-3">
+                                <label for="confirmPassword" class="form-label">Confirm Password:</label>
                                 <input type="password" class="form-control" id="confirmPassword" name="cpass" required>
                             </div>
-                        </div>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-primary w-100">Update</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="text-center mt-3">
-                        <button type="submit" class="btn btn-success">Update</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 </section>
-<br><br>
-<%- include ("footer.ejs") %>
+<script>
+    function validatePassword() {
+        var passwordError = document.getElementById('passwordError');
+        var password = document.getElementById('password').value;
+
+        if (!password.match(/^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*()-_+=<>?])[A-Za-z\d\S]{8,}$/)) {
+            passwordError.innerHTML = 'Password must meet the following criteria:<br>' +
+                '- At least 8 characters in length<br>' +
+                '- At least one letter (uppercase or lowercase)<br>' +
+                '- At least one digit<br>' +
+                '- At least one symbol';
+            return false;
+        } else {
+            passwordError.innerHTML = '';
+            return true;
+        }
+    } 
+</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/min/tiny-slider.js"></script>
+    <script src="../../static/js/magiczoom.js"></script>
+    <script src="../static/js/jquery-3.3.1.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery-ui.js"></script>
+    <script src="../static/js/owl.carousel.min.js"></script>
+    <script src="../static/js/jquery.magnific-popup.min.js"></script>
+    <script src="../static/js/aos.js"></script>
+
+    <script src="../static/js/main.js"></script>
+
+</body>
+
+</html>
+
