--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -51,14 +51,17 @@
           </p>
           <span id="ratingContainer" class="rating-container">
             <span class="rating">
-              <span style="font-family: Arial, Helvetica, sans-serif; font-weight: 400; color: #000;">&nbsp;3.7</span>&nbsp;<span class="green-star">★</span>&nbsp;<span id="avgrating"></span>&nbsp;<span>1.8k Ratings&nbsp;</span>
+              <span
+                style="font-family: Arial, Helvetica, sans-serif; font-weight: 400; color: #000;">&nbsp;3.7</span>&nbsp;<span
+                class="green-star">★</span>&nbsp;<span id="avgrating"></span>&nbsp;<span>1.8k Ratings&nbsp;</span>
             </span>
           </span>
           <hr>
           <p><strong class="rateMain">₹<%= productOne.discountPrice %></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
               class="rate">MRP.</span>&nbsp;&nbsp;&nbsp;<span class="rate"
               style="text-decoration: line-through;color: #857b79;">₹<%= productOne.price%>
-                </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="rateOff">(<%= productOne.discount%>% OFF)</span><br><span style="font-weight: 300;color: rgb(11, 215, 157);">inclusive of all taxes</span></p>
+            </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="rateOff">(<%= productOne.discount%>% OFF)</span><br><span
+              style="font-weight: 300;color: rgb(11, 215, 157);">inclusive of all taxes</span></p>
           <form id="addToCartForm" onsubmit="return addToCart(event);" method="post"
             action="/addtoCart/<%= productOne._id %>">
 
@@ -85,18 +88,18 @@
 
             <% if(pass&&pass.length>0){%>
               <div style="color: red; font-size: 16px; font-weight: bold;">
-                  <%= pass%>
+                <%= pass%>
               </div>
                   <%}%>
-            <div class="d-flex align-items-center mb-4">
-              <button type="submit" class="btn btn-primary mr-2">
-                  <span class="fas fa-shopping-cart"></span> Add to Cart
-              </button>
-              <a id="addToWishlistBtn" class="btn btn-primary wishlist-btn" href="#">
-                <span class="fas fa-heart"></span> Add to Wishlist
-              </a>
-          </div>
-        </form>
+              <div class="d-flex align-items-center flex-column flex-md-row mb-4">
+                <button type="submit" class="btn btn-primary mb-2 mb-md-0 mr-md-2 btn-block">
+                    <span class="fas fa-shopping-cart"></span> Add to Cart
+                </button>
+                <a id="addToWishlistBtn" class="btn btn-primary wishlist-btn mt-2 mt-md-0 btn-block" href="#">
+                    <span class="fas fa-heart"></span> Add to Wishlist
+                </a>
+            </div>
+          </form>
         </div>
       </div>
     </div>
@@ -127,7 +130,9 @@
                         <%= product.description %>
                       </p>
                       <p class="text-primary font-weight-bold my-0" style="line-height: 2; font-size: 18px;">
-                        <span style="text-decoration: line-through;"><%= product.price %></span>&nbsp;
+                        <span style="text-decoration: line-through;">
+                          <%= product.price %>
+                        </span>&nbsp;
                         ₹<%= product.discountPrice %>
                       </p>
                       <p class="text-primary my-0" style="line-height: 0.5;">
@@ -145,12 +150,12 @@
   </div>
 
   <script>
-    document.getElementById('addToWishlistBtn').addEventListener('click', function(event) {
-      event.preventDefault(); 
-    
-      var productId = '<%= productOne._id %>'; 
-      var selectedSize = document.querySelector('input[name="size"]:checked'); 
-    
+    document.getElementById('addToWishlistBtn').addEventListener('click', function (event) {
+      event.preventDefault();
+
+      var productId = '<%= productOne._id %>';
+      var selectedSize = document.querySelector('input[name="size"]:checked');
+
       if (!selectedSize) {
         Swal.fire({
           icon: 'error',
@@ -159,15 +164,15 @@
         });
         return;
       }
-    
-      var sizeValue = selectedSize.value; 
-      var url = '/addtofavourites/<%= productOne._id %>'; 
-    
+
+      var sizeValue = selectedSize.value;
+      var url = '/addtofavourites/<%= productOne._id %>';
+
       url += '?size=' + encodeURIComponent(sizeValue);
-  
+
       window.location.href = url;
     });
-    </script>
+  </script>
 
   <script>
     document.getElementById("addToCartForm").addEventListener("submit", function (event) {
